# chaos

./: .gitignore  CMakeLists.txt  README.md  main
.cache/clangd/index/: main.cpp.52C8121CE4C7AC96.idx  main.cpp.D794F9316D7E3C0E.idx
src/: main.cpp
